--- a/Models/xG/Understanding_xG.ipynb
+++ b/Models/xG/Understanding_xG.ipynb
@@ -432,7 +432,7 @@
    "outputs": [],
    "source": [
     "parser = Sbopen()\n",
-    "#get list of games during Indian Super League season\n",
+    "#get list of games during FIFA WC\n",
     "df_match = parser.match(competition_id=43, season_id=106)\n",
     "\n",
     "matches = df_match.match_id.unique()\n",
