--- a/DataViz/FotMob.ipynb
+++ b/DataViz/FotMob.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "id": "7d003760-7c10-4c1e-b125-06be71d94633",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "## Get the matchId from FotMOb\n",
+    "## Get the matchId from FotMob match url\n",
     "params = {\n",
     "    'matchId': '4448111',\n",
     "}\n",
