--- a/DataViz/MatchReport.ipynb
+++ b/DataViz/MatchReport.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "9dd36b9c-bb97-497c-aaf5-48306e7ad7ad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Importing Necessary Libraries"
    ]
@@ -94,7 +96,9 @@
   {
    "cell_type": "markdown",
    "id": "7af416e4-f3bc-447f-b0b4-9a3d702f3edc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Calling Understat with desired Match ID"
    ]
@@ -123,7 +127,9 @@
   {
    "cell_type": "markdown",
    "id": "28bf4e85-fb58-481c-91ea-31758cd47987",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Function to scrape data from website as json"
    ]
@@ -164,7 +170,9 @@
   {
    "cell_type": "markdown",
    "id": "58d0c2c4-77b8-4f68-9424-0c6290d8f110",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Creating pandas df with scraped json"
    ]
@@ -259,7 +267,9 @@
   {
    "cell_type": "markdown",
    "id": "e1c4c8b5-cc75-4746-8061-11ffd70f2340",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Calculate Total xG Created by both Teams"
    ]
@@ -310,7 +320,9 @@
   {
    "cell_type": "markdown",
    "id": "6c583624-0db0-4c62-b1bd-a46a7e3e7efc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Calculate Total Shots and Total Shots On Target Taken by both Teams"
    ]
@@ -358,7 +370,9 @@
   {
    "cell_type": "markdown",
    "id": "4f4753c3-7122-41f9-ab83-dafa19d2517e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Calculating Goals Scored by each team"
    ]
@@ -405,7 +419,9 @@
   {
    "cell_type": "markdown",
    "id": "058a2a0e-4ea0-4c16-b579-4e0e4af2025b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Using Soccerdata lib to extract Stats from FotMob"
    ]
@@ -2414,7 +2430,9 @@
   {
    "cell_type": "markdown",
    "id": "5632c5a2-0eef-48c9-96c3-de44ceca146f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Creating Plot for Overall Stats"
    ]
@@ -2669,7 +2687,9 @@
   {
    "cell_type": "markdown",
    "id": "c33d2b47-5897-4629-ac6b-0032a877b499",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Function for Shot Map"
    ]
@@ -2704,7 +2724,9 @@
   {
    "cell_type": "markdown",
    "id": "27027386-14be-4169-8616-87dc510e7a24",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Function for Goal Map"
    ]
@@ -2730,7 +2752,9 @@
   {
    "cell_type": "markdown",
    "id": "49c26d24-c21c-4e80-b4ca-f204f28405fd",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Function for ShotMap by Specific Player"
    ]
@@ -2760,7 +2784,9 @@
   {
    "cell_type": "markdown",
    "id": "5e707f06-cefc-4158-9d44-a38c2940b4fa",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Creating Plots for shots and goals"
    ]
@@ -3866,7 +3892,9 @@
   {
    "cell_type": "markdown",
    "id": "1e2f971c-3283-441f-9210-44aa934e05b9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Another Way of Creating a Passing Network with html file"
    ]
@@ -4158,7 +4186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
