--- a/DataViz/WhoScored.ipynb
+++ b/DataViz/WhoScored.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "5b3c3394-d8eb-432a-9501-602ee1fcdde5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## WhoScored"
    ]
@@ -161,7 +163,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "a4e7570f-ed82-4bb9-bc0d-05cdbb9aecbf",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "KeyError",
@@ -1443,7 +1450,9 @@
   {
    "cell_type": "markdown",
    "id": "f14d586d-abb7-43ec-899d-669a149003ad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Player Pass Map and Team Danger Passes"
    ]
@@ -1582,6 +1591,14 @@
     "#add title\n",
     "fig.suptitle('Location of danger passes by ' + team, fontsize = 25,color='white')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a1a061-a776-4dd1-8d03-6383d8c23003",
+   "metadata": {},
+   "source": [
+    "## Passing Network"
    ]
   },
   {
@@ -24876,7 +24893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
