--- a/DataViz/MatchReportV2.ipynb
+++ b/DataViz/MatchReportV2.ipynb
@@ -66,7 +66,9 @@
   {
    "cell_type": "markdown",
    "id": "c9798bf1-7e0c-4fc8-92ac-3939b552e16f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## SCRAPING DATA - FotMob and WhoScored"
    ]
