--- a/DataViz/RadarPlot.ipynb
+++ b/DataViz/RadarPlot.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "89c3a9c7-da7d-4029-946f-d0cda1a5117d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Radar Chart"
    ]
@@ -18,10 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "b9f74cfc-71a6-4ddc-9abf-5fe2598d1f64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'adjustText'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgridspec\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GridSpec\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmplsoccer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pitch, VerticalPitch\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01madjustText\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m adjust_text\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpatheffects\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpath_effects\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'adjustText'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -507,7 +521,9 @@
   {
    "cell_type": "markdown",
    "id": "c5d992be-92a3-4352-ab06-2322bbc608c7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Bonus Plot - Age V Minutes Played for a Squad"
    ]
@@ -617,6 +633,92 @@
     "df = pd.read_csv(city_new_url)\n",
     "squad_age_profile_chart(df,'Manchester City')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b470bf-7a6c-4a06-b661-0d21d8fc8afb",
+   "metadata": {},
+   "source": [
+    "# Viz-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7cd9a9c5-f4b9-4433-a4d0-76c7c5d61882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('C:/Users/acer/Documents/GitHub/IndianCitizen/StreamLit/Data/premier_league_2024-25_event_data_GW1_4.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8920f7ec-81ba-4fc2-9e47-cc513633dfd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['game_id', 'period', 'minute', 'second', 'expanded_minute', 'type',\n",
+       "       'outcome_type', 'team_id', 'team', 'player_id', 'player', 'x', 'y',\n",
+       "       'end_x', 'end_y', 'goal_mouth_y', 'goal_mouth_z', 'blocked_x',\n",
+       "       'blocked_y', 'qualifiers', 'is_touch', 'is_shot', 'is_goal',\n",
+       "       'card_type', 'related_event_id', 'related_player_id'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4dc88fe8-a518-4443-8fea-cce2f291142a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1_df = df[df['player'] == 'Ederson']\n",
+    "p2_df = df[df['player'] == 'David Raya']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "42657d6f-0b89-4232-b27e-8942916abbf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Pass', 'KeeperPickup', 'Save', 'Claim', 'BallRecovery', 'Punch',\n",
+       "       'KeeperSweeper', 'Clearance', 'CornerAwarded', 'Interception',\n",
+       "       'Smother', 'Aerial'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1_df['type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367850c0-72db-4d0b-ab33-e04870a7104f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
