--- a/ScorePredict/notebooks/DataExtraction.ipynb
+++ b/ScorePredict/notebooks/DataExtraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "4b9d3347-22ca-4eab-9af6-474308093ed0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "40e0b85f-483f-45fa-b02e-261512331d6d",
    "metadata": {},
    "outputs": [],
@@ -53,20 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
     "## EPL , Bundesliga , Serie_A , Ligue_1 , La_Liga\n",
-    "league = \"Serie_A\"\n",
+    "league = \"La_Liga\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=\"2024\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "af454b97-6c43-45fa-9963-da982c01e931",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "9f010c70-7e04-4e5e-9071-2dbb764c5cb9",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27442 is not a valid match\n"
+      "27099 is not a valid match\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "8c7d1f47-0fa5-43e0-86c0-b1b5a5362047",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [],
