--- a/ScorePredict/notebooks/SeasonAnalysis.ipynb
+++ b/ScorePredict/notebooks/SeasonAnalysis.ipynb
@@ -628,7 +628,9 @@
   {
    "cell_type": "markdown",
    "id": "f2baf0d2-5a3a-42f2-bacc-55c017bef62e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## ShotMap"
    ]
