--- a/Streamlit/notebooks/ShotsDataExtractionEPL.ipynb
+++ b/Streamlit/notebooks/ShotsDataExtractionEPL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "4b9d3347-22ca-4eab-9af6-474308093ed0",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import requests\n",
     "import re\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "from sqlalchemy.exc import SQLAlchemyError"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "2d5583e7",
    "metadata": {},
    "outputs": [],
@@ -46,8 +47,8 @@
     "# Create a connection engine\n",
     "engine = create_engine(f\"postgresql+psycopg2://{db_config['user']}:{db_config['password']}@{db_config['host']}:{db_config['port']}/{db_config['dbname']}\")\n",
     "\n",
-    "with engine.connect() as conn:\n",
-    "    conn.execute('TRUNCATE TABLE understat_shots_tb RESTART IDENTITY CASCADE;')\n",
+    "#with engine.connect() as conn:\n",
+    "#    conn.execute('TRUNCATE TABLE understat_shots_tb RESTART IDENTITY CASCADE;')\n",
     "\n",
     "def save_to_postgres(dataframe, table_name):\n",
     "    try:\n",
@@ -55,26 +56,68 @@
     "        dataframe.to_sql(table_name, engine, if_exists='append', index=False)\n",
     "        print(f\"Data successfully saved to {table_name} table.\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error saving data to PostgreSQL: {e}\")\n"
+    "        print(f\"Error saving data to PostgreSQL: {e}\")\n",
+    "\n",
+    "\n",
+    "def upsert_to_postgres(df, table_name, primary_key, engine):\n",
+    "    try:\n",
+    "        with engine.connect() as conn:\n",
+    "            # Begin a transaction\n",
+    "            with conn.begin():\n",
+    "                # Create a temporary table for the upsert operation\n",
+    "                temp_table_name = f\"{table_name}_temp\"\n",
+    "                df.to_sql(temp_table_name, con=conn, if_exists='replace', index=False)\n",
+    "                \n",
+    "                # Construct the merge query using a WITH clause\n",
+    "                quoted_columns = [\"X\", \"Y\",\"xG\",\"shotType\",\"lastAction\"]\n",
+    "                update_columns = \", \".join([f'{col} = EXCLUDED.{col}' for col in df.columns if col != primary_key])\n",
+    "                insert_columns = \", \".join([f'\"{col}\"' if col in quoted_columns else col for col in df.columns])\n",
+    "                insert_values = \", \".join([f':{col}' for col in df.columns])\n",
+    "\n",
+    "                upsert_query = f\"\"\"\n",
+    "                INSERT INTO {table_name} ({insert_columns})\n",
+    "                SELECT {insert_columns} FROM {temp_table_name}\n",
+    "                ON CONFLICT ({primary_key})\n",
+    "                DO UPDATE SET {update_columns};\n",
+    "                \"\"\"\n",
+    "                \n",
+    "                # Execute the merge query\n",
+    "                conn.execute(upsert_query)\n",
+    "                \n",
+    "                # Drop the temporary table\n",
+    "                conn.execute(f\"DROP TABLE IF EXISTS {temp_table_name};\")\n",
+    "                \n",
+    "            print(f\"Upsert to table '{table_name}' completed successfully.\")\n",
+    "    \n",
+    "    except SQLAlchemyError as e:\n",
+    "        print(f\"Error during upsert: {str(e)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "1bca3563-6f5f-411c-b269-703228748ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
     "## EPL , Bundesliga , Serie_A , Ligue_1 , La_Liga\n",
-    "#league = \"EPL\"\n",
-    "#season = \"2024\"\n",
+    "league = \"EPL\"\n",
+    "season = \"2024\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=season)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "af454b97-6c43-45fa-9963-da982c01e931",
    "metadata": {},
    "outputs": [],
@@ -101,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9f010c70-7e04-4e5e-9071-2dbb764c5cb9",
    "metadata": {},
    "outputs": [],
@@ -126,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "8c7d1f47-0fa5-43e0-86c0-b1b5a5362047",
    "metadata": {},
    "outputs": [],
@@ -155,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "e2f52b8e-42f5-4c4e-a6d6-2e143084c72d",
    "metadata": {},
    "outputs": [],
@@ -165,7 +208,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
+   "id": "faf3ef6b-ba9b-465d-a6a8-4fb7e05115bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compiled_shot_df['id'] = compiled_shot_df['id'].astype(int)\n",
+    "compiled_shot_df['minute'] = compiled_shot_df['minute'].astype(int)\n",
+    "compiled_shot_df['X'] = pd.to_numeric(compiled_shot_df['X'], errors='coerce')\n",
+    "compiled_shot_df['Y'] = pd.to_numeric(compiled_shot_df['Y'], errors='coerce')\n",
+    "compiled_shot_df['xG'] = pd.to_numeric(compiled_shot_df['xG'], errors='coerce')\n",
+    "compiled_shot_df['player_id'] = compiled_shot_df['player_id'].astype(int)\n",
+    "compiled_shot_df['season'] = compiled_shot_df['season'].astype(int)\n",
+    "compiled_shot_df['match_id'] = compiled_shot_df['match_id'].astype(int)\n",
+    "compiled_shot_df['h_goals'] = compiled_shot_df['h_goals'].astype(int)\n",
+    "compiled_shot_df['a_goals'] = compiled_shot_df['a_goals'].astype(int)\n",
+    "compiled_shot_df['date'] = pd.to_datetime(compiled_shot_df['date'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [
@@ -173,14 +236,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data successfully saved to understat_shots_tb table.\n"
+      "Error during upsert: (psycopg2.errors.UndefinedColumn) column excluded.x does not exist\n",
+      "LINE 5: ... = EXCLUDED.minute, result = EXCLUDED.result, X = EXCLUDED.X...\n",
+      "                                                             ^\n",
+      "\n",
+      "[SQL: \n",
+      "                INSERT INTO understat_shots_tb (id, minute, result, \"X\", \"Y\", \"xG\", player, h_a, player_id, situation, season, \"shotType\", match_id, h_team, a_team, h_goals, a_goals, date, player_assisted, \"lastAction\", league)\n",
+      "                SELECT id, minute, result, \"X\", \"Y\", \"xG\", player, h_a, player_id, situation, season, \"shotType\", match_id, h_team, a_team, h_goals, a_goals, date, player_assisted, \"lastAction\", league FROM understat_shots_tb_temp\n",
+      "                ON CONFLICT (id)\n",
+      "                DO UPDATE SET minute = EXCLUDED.minute, result = EXCLUDED.result, X = EXCLUDED.X, Y = EXCLUDED.Y, xG = EXCLUDED.xG, player = EXCLUDED.player, h_a = EXCLUDED.h_a, player_id = EXCLUDED.player_id, situation = EXCLUDED.situation, season = EXCLUDED.season, shotType = EXCLUDED.shotType, match_id = EXCLUDED.match_id, h_team = EXCLUDED.h_team, a_team = EXCLUDED.a_team, h_goals = EXCLUDED.h_goals, a_goals = EXCLUDED.a_goals, date = EXCLUDED.date, player_assisted = EXCLUDED.player_assisted, lastAction = EXCLUDED.lastAction, league = EXCLUDED.league;\n",
+      "                ]\n",
+      "(Background on this error at: https://sqlalche.me/e/14/f405)\n"
      ]
     }
    ],
    "source": [
     "#compiled_shot_df.to_csv(f'C:/Users/acer/Documents/GitHub/IndianCitizen/ScorePredict/Data/{league}/2024-25/shot_data.csv')\n",
-    "save_to_postgres(compiled_shot_df, 'understat_shots_tb')"
+    "#save_to_postgres(compiled_shot_df, 'understat_shots_tb')\n",
+    "upsert_to_postgres(compiled_shot_df, 'understat_shots_tb','id',engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e5485ea-c63e-42ab-8e8a-f7e89ff93f52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
