--- a/Streamlit/notebooks/ShotsDataExtraction.ipynb
+++ b/Streamlit/notebooks/ShotsDataExtraction.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "id": "2d5583e7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
     "                \n",
     "                # Construct the merge query using a WITH clause\n",
     "                quoted_columns = [\"X\", \"Y\",\"xG\",\"shotType\",\"lastAction\"]\n",
-    "                update_columns = \", \".join([f'{col} = EXCLUDED.{col}' for col in df.columns if col != primary_key])\n",
+    "                update_columns = \", \".join([f'\"{col}\" = EXCLUDED.\"{col}\"' if col in quoted_columns else f'{col} = EXCLUDED.{col}' for col in df.columns if col != primary_key])\n",
     "                insert_columns = \", \".join([f'\"{col}\"' if col in quoted_columns else col for col in df.columns])\n",
     "                insert_values = \", \".join([f':{col}' for col in df.columns])\n",
     "\n",
@@ -95,22 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1bca3563-6f5f-411c-b269-703228748ad9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
     "## EPL , Bundesliga , Serie_A , Ligue_1 , La_Liga\n",
-    "league = \"EPL\"\n",
-    "season = \"2024\"\n",
+    "#league = \"EPL\"\n",
+    "#season = \"2024\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=season)"
    ]
@@ -228,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [
@@ -236,17 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error during upsert: (psycopg2.errors.UndefinedColumn) column excluded.x does not exist\n",
-      "LINE 5: ... = EXCLUDED.minute, result = EXCLUDED.result, X = EXCLUDED.X...\n",
-      "                                                             ^\n",
-      "\n",
-      "[SQL: \n",
-      "                INSERT INTO understat_shots_tb (id, minute, result, \"X\", \"Y\", \"xG\", player, h_a, player_id, situation, season, \"shotType\", match_id, h_team, a_team, h_goals, a_goals, date, player_assisted, \"lastAction\", league)\n",
-      "                SELECT id, minute, result, \"X\", \"Y\", \"xG\", player, h_a, player_id, situation, season, \"shotType\", match_id, h_team, a_team, h_goals, a_goals, date, player_assisted, \"lastAction\", league FROM understat_shots_tb_temp\n",
-      "                ON CONFLICT (id)\n",
-      "                DO UPDATE SET minute = EXCLUDED.minute, result = EXCLUDED.result, X = EXCLUDED.X, Y = EXCLUDED.Y, xG = EXCLUDED.xG, player = EXCLUDED.player, h_a = EXCLUDED.h_a, player_id = EXCLUDED.player_id, situation = EXCLUDED.situation, season = EXCLUDED.season, shotType = EXCLUDED.shotType, match_id = EXCLUDED.match_id, h_team = EXCLUDED.h_team, a_team = EXCLUDED.a_team, h_goals = EXCLUDED.h_goals, a_goals = EXCLUDED.a_goals, date = EXCLUDED.date, player_assisted = EXCLUDED.player_assisted, lastAction = EXCLUDED.lastAction, league = EXCLUDED.league;\n",
-      "                ]\n",
-      "(Background on this error at: https://sqlalche.me/e/14/f405)\n"
+      "Upsert to table 'understat_shots_tb' completed successfully.\n"
      ]
     }
    ],
